# sensor_data_pipeline__

./: .env.example  .gitignore  .sqlfluff  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/config/: settings.py
airflow/dags/: sensor_data_pipeline.py
airflow/hooks/: database.py
airflow/operators/: dbt.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: _marts.yml  mart_daily_power.sql
dbt/models/staging/: _staging.yml  stg_readings.sql
scripts/: init_db.sql  setup.sh  test_all.sh
src/api/: app.py
src/api/routes/: data.py  health.py
src/config/: settings.py
src/db/: connection.py
src/db/repositories/: readings.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/unit/: test_parsing.py  test_power_calculation.py  test_validation.py
