[tool.poetry]
name = "starter-interview-swe-python"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
Flask = "2.2.5"
pydantic-settings = "^2.12.0"
psycopg2 = "^2.9.11"
tenacity = "^9.1.2"
dbt-postgres = "^1.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.408"
types-psycopg2 = "^2.9.21.20251012"
pytest = "^8.0.0"
ruff = "^0.4.0"

[tool.pyright]
typeCheckingMode = "strict"
strictListInference = true
strictDictionaryInference = true
reportMissingTypeStubs = true
pythonVersion = "3.11"
include = ["src", "tests"]
exclude = ["airflow", ".venv", "dbt/dbt_packages"]
extraPaths = ["."]

[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = ["."]
reportUnknownMemberType = false
reportMissingTypeStubs = false